added service layer etc. && project should now have all 5 security flaws

--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -13,6 +13,7 @@
     "react"
   ],
   "rules": {
+    "no-console": "off",
     "max-len": ["error", { "code": 100 }],
     "arrow-body-style": "off",
     "import/prefer-default-export": "off",
