--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,11 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dompurify": "^3.0.6",
     "express": "^5.0.0-beta.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsdom": "^23.0.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
     "prisma": "^5.7.1",
@@ -24,7 +26,9 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
+    "@types/dompurify": "^3.0.5",
     "@types/express": "^4.17.21",
+    "@types/jsdom": "^21.1.6",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.5",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
